Fixed issue #11514: Z-index problem: Slider tooltip above error message

--- a/templates/default/css/bootstrap-slider.css
+++ b/templates/default/css/bootstrap-slider.css
@@ -134,6 +134,9 @@
 .slider .tooltip-inner {
   white-space: nowrap;
 }
+.slider .tooltip {
+  z-index: 1049;
+}
 .slider .hide {
   display: none;
 }
